...
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/main_horizontal_margin">

            <TextView
                android:id="@+id/clinic_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="@color/clinic_content_title"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="@string/clinic_title_default"/>

            <TextView
                android:id="@+id/clinic_tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:textColor="@color/clinic_content_title"
                android:textSize="13sp"
                tools:text="@string/clinic_detail_default"/>
...
