<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/action_bar_bkg"
                android:orientation="vertical">

    <TextView
        android:id="@+id/action_bar_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/action_bar_text"
        android:textSize="17sp"
        tools:text="@string/clinic_title_default"/>

    <ImageView
        android:id="@+id/action_bar_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_horizontal_margin"
        android:contentDescription="@null"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:src="@drawable/action_bar_arrow"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider_line"/>

</RelativeLayout>